Add Modules Support for java 9+ jdks Remove lombok